kube-metrics/Chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: metrix.example.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-state-metrics
            port:
              number: 8080
